test/org/midica/testfiles/failing/eff-func-param-too-high-1.midica
INCLUDE inc/instruments.midica


0: vol.line(1,128)
